--- a/CadastroBD/nbproject/private/private.properties
+++ b/CadastroBD/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Lukas Cau\u00e3\\AppData\\Roaming\\NetBeans\\22\\build.properties
+user.properties.file=C:\\Users\\walll\\AppData\\Roaming\\NetBeans\\21\\build.properties
